frontend/tests/cases/negative/simple/two-errors.gr
-- ensure that we report both errors

foo : Int
foo = ()

bar : ()
bar = 1